results/c977ae2c71498fc94c74f8e0f73dd266/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, c977ae2c71498fc94c74f8e0f73dd266, {modelStrings},   argslist = (x, 0.65, data)
                                         ^
SyntaxError: invalid syntax
